changed task run to run alone fixed css logout changed chat to contrast message owner

--- a/front/web/static/css/sb-admin-2.css
+++ b/front/web/static/css/sb-admin-2.css
@@ -81,7 +81,7 @@ body {
 }
 
 .navbar-top-links .dropdown-user {
-    right: 0;
+    right: 5;
     left: auto;
 }
 
